# jira-desktop-unofficial

./: CHANGELOG.md  README.md  how-to-dev.txt  index.html  main.js  package.json  snapcraft.yaml  vite.config.js
.github/workflows/: build-flatpak.yml  build-mac.yml  mac-build.yml  sync-upstream.yml
flatpak/: com.flagodna.JiraDesktopUnofficial.yml  com.maxschulmeister.Jira.yml  com.maxschulmeister.JiraDesktop.yml
snap/gui/: jira-desktop.desktop  jira.desktop
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri-conf-linux.json  tauri-conf-windows.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
