[package]
name = "jira-desktop"
version = "0.1.0"
description = "Jira Desktop"
authors = ["maxschulmeister"]
edition = "2021"

[lib]
name = "jira_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.7", features = ["v4"] }  
once_cell = "1.19"
