[package]
name = "jira"
version = "0.1.0"
description = "Jira"
authors = ["maxschulmeister"]
edition = "2021"

[lib]
name = "jira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.7", features = ["v4"] }  
once_cell = "1.19" 
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
wry = { version = "0.x" } 
